added some new google fonts to html and other minor style tweaks

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -8,9 +8,11 @@
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Lobster|Raleway" rel="stylesheet">  
+  <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Open+Sans" rel="stylesheet">
   <style type="text/css">
     h1 {
-      font-family: 'Lobster', cursive;
+      /*font-family: 'Lobster', cursive;*/
+      font-family: 'Kaushan Script', cursive;
     }
     h3 {
       font-family: 'Raleway', sans-serif;
